# fleabox

./: AGENT_INSTRUCTIONS.md  Cargo.toml  README.md  blog-post.md  config.example.json  config.json
.devcontainer/: devcontainer.json
e2e/: README.md  package.json  playwright.auth.config.ts  playwright.config.ts
e2e/tests/: auth.spec.ts  bookmarks.spec.ts  homepage.spec.ts  todo.spec.ts
examples/bookmarks/: index.html  index.js  styles.css
examples/habits/: index.html
examples/journal/: index.html
examples/notes/: index.html
examples/todo/: index.html
examples/tutorial/: index.html
src/: main.rs
tests/: api_tests.rs
