[package]
name = "fleabox"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
axum-extra = { version = "0.9", features = ["cookie"] }
rsa = "0.9"
rand = "0.8"
pam = "0.7"
base64 = "0.22"
urlencoding = "2.1"
sha2 = "0.10"
time = "0.3"

[dev-dependencies]
tempfile = "3.0"
tower = "0.5"
